--- a/style.css
+++ b/style.css
@@ -291,7 +291,33 @@ h3{
 
 }
 
+/*RACHELLE*/
+.rachelle-words{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+    url(images/banner7.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
 
+}
+
+.rachelle-words h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+
+}
+
+.rachelle-words p{
+    color: #fff;
+    margin-bottom: 20px;
+    padding: 0 50px 0;
+
+}
 
 /*Footer*/
 .footer{
@@ -374,13 +400,13 @@ h3{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
-    url(images/banner2.jpg);
+    url(images/banner7.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 
-.sub-header-sean h1{
+.sub-header-rachelle h1{
     margin-top: 100px;
 }
