--- a/style.css
+++ b/style.css
@@ -319,6 +319,34 @@ h3{
 
 }
 
+/*RACHELLE*/
+.dewald-words{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+    url(images/banner5.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+
+}
+
+.dewald-words h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+
+}
+
+.dewald-words p{
+    color: #fff;
+    margin-bottom: 20px;
+    padding: 0 50px 0;
+
+}
+
 /*Footer*/
 .footer{
     width: 100%;
@@ -408,5 +436,22 @@ h3{
 }
 
 .sub-header-rachelle h1{
+    margin-top: 100px;
+}
+
+/*Rachelle*/
+
+.sub-header-dewald{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
+    url(images/banner5.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header-dewald h1{
     margin-top: 100px;
 }
