--- a/style.css
+++ b/style.css
@@ -234,13 +234,13 @@ h3{
 
 }
 
-/*Jarrod*/
+/*Jarrod  ON MAIN PAGE*/
 .jarrod-words{
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),
     url(images/The\ Blue\ Lotus.png);
-    background-position: center;
+    background-position: center 80%;
     background-size: cover;
     border-radius: 10px;
     text-align: center;
@@ -263,7 +263,7 @@ h3{
 }
 
 
-/*SEAN*/
+/*SEAN  ON MAIN PAGE*/
 .sean-words{
     margin: 100px auto;
     width: 80%;
@@ -291,13 +291,13 @@ h3{
 
 }
 
-/*RACHELLE*/
+/*RACHELLE  ON MAIN PAGE*/
 .rachelle-words{
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
     url(images/banner7.jpg);
-    background-position: center;
+    background-position: center 30%;
     background-size: cover;
     border-radius: 10px;
     text-align: center;
@@ -319,13 +319,13 @@ h3{
 
 }
 
-/*RACHELLE*/
+/*DEWALD ON MAIN PAGE*/
 .dewald-words{
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
-    url(images/banner5.jpg);
-    background-position: center;
+    url(images/banner5.png);
+    background-position: center bottom;
     background-size: cover;
     border-radius: 10px;
     text-align: center;
@@ -386,7 +386,7 @@ h3{
 }
 
 .sub-header h1{
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 /* sub header jarrod ===============*/
@@ -395,14 +395,14 @@ h3{
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.1),rgba(4,9,30,0.1)),
     url(images/The\ Blue\ Lotus.png);
-    background-position: center;
+    background-position: center 80%;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 
 .sub-header-jarrod h1{
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 /*SEAN*/
@@ -419,7 +419,7 @@ h3{
 }
 
 .sub-header-sean h1{
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 /*Rachelle*/
@@ -427,16 +427,16 @@ h3{
 .sub-header-rachelle{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
+    background-image: linear-gradient(rgba(4,9,30,0.2),rgba(4,9,30,0.2)),
     url(images/banner7.jpg);
-    background-position: center;
+    background-position: center 30%;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 
 .sub-header-rachelle h1{
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 /*Rachelle*/
@@ -445,13 +445,13 @@ h3{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
-    url(images/banner5.jpg);
-    background-position: center;
+    url(images/banner5.png);
+    background-position: center bottom;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 
 .sub-header-dewald h1{
-    margin-top: 100px;
+    margin-top: 70px;
 }
