--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ h3{
 .dewald-words{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),
     url(images/banner5.png);
     background-position: center bottom;
     background-size: cover;
@@ -453,7 +453,7 @@ h3{
 }
 
 .sub-header-dewald h1{
-    margin-top: 70px;
+    margin-top: 40px;
 }
 
 
@@ -536,4 +536,124 @@ h3{
     .row{
         flex-direction: column;
     }
+}
+
+
+/*=============================BOOK LAYOUT*/
+.book-artwork{
+    margin:0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+    background: linear-gradient(90deg, #9a94a0 50%, #39305c 50%);
+}
+.book-artwork input{
+    display: none;
+}
+.book-artwork img{
+    width: 100%;
+    height: 100%;
+}
+
+.book{
+    display: flex;
+}
+
+#cover{
+    width: 250px;
+    height: 400px;
+}
+
+.flip-book{
+    width: 250px;
+    height: 400px;
+    position: relative;
+    perspective: 1500px;
+}
+
+.flip{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform-origin: left;
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
+    transition: 0.5s;
+    color: #000;
+}
+p{
+    font-size: 14px;
+    line-height: 24px;
+
+}
+
+.front{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(247, 246, 250);
+    box-sizing: border-box;
+    padding: 0 13px;
+    box-shadow: inset 20px 0 50px rgba(0,0,0,0.5) 0 2px 5px rgba(0,0,0,0.5);
+
+}
+/*rgba(0,0,0,0.5) 0 2px 5px rgba(0,0,0,0.5)*/
+.back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    background-color: #000;
+
+}
+
+.next-btn{
+    position: absolute;
+    bottom: 13px;
+    right: 13px;
+    cursor: pointer;
+    color: #000;
+}
+
+.back-btn{
+    position: absolute;
+    bottom: 13px;
+    right: 13px;
+    cursor: pointer;
+    color: #000000;
+}
+
+#p1{
+    z-index: 3;
+}
+
+#p2{
+    z-index: 2;
+}
+
+#p3{
+    z-index: 1;
+}
+
+#c1:checked ~ .flip-book #p1{
+    transform: rotateY(-180deg);
+}
+
+#c2:checked ~ .flip-book #p2{
+    transform: rotateY(-180deg);
+}
+
+#c3:checked ~ .flip-book #p3{
+    transform: rotateY(-180deg);
 }
