--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ h3{
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(images/banner4.avif);
+    url(images/juliet_banner.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -267,8 +267,8 @@ h3{
 .sean-words{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
-    url(images/banner2.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
+    url(images/sean_banner.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -295,8 +295,8 @@ h3{
 .rachelle-words{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
-    url(images/banner7.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
+    url(images/rachelle_banner.png);
     background-position: center 30%;
     background-size: cover;
     border-radius: 10px;
@@ -324,7 +324,7 @@ h3{
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),
-    url(images/banner5.png);
+    url(images/dewald_banner.png);
     background-position: center bottom;
     background-size: cover;
     border-radius: 10px;
@@ -374,19 +374,19 @@ h3{
 
 /*--------------------------------------JULIET*/
 
-.sub-header{
+.sub-header-juliet{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
-    url(images/banner4.avif);
+    url(images/juliet_banner.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
     color: #fff;
 }
 
-.sub-header h1{
-    margin-top: 70px;
+.sub-header-juliet h1{
+    margin-top: 20px;
 }
 
 /* sub header jarrod ===============*/
@@ -402,7 +402,7 @@ h3{
 }
 
 .sub-header-jarrod h1{
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 /*SEAN*/
@@ -411,7 +411,7 @@ h3{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.2),rgba(4,9,30,0.2)),
-    url(images/banner2.jpg);
+    url(images/sean_banner.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -419,7 +419,7 @@ h3{
 }
 
 .sub-header-sean h1{
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 /*Rachelle*/
@@ -427,8 +427,8 @@ h3{
 .sub-header-rachelle{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.2),rgba(4,9,30,0.2)),
-    url(images/banner7.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.6),rgba(4,9,30,0.6)),
+    url(images/rachelle_banner.png);
     background-position: center 30%;
     background-size: cover;
     text-align: center;
@@ -436,7 +436,7 @@ h3{
 }
 
 .sub-header-rachelle h1{
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 /*Rachelle*/
@@ -445,7 +445,7 @@ h3{
     height: 50vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),
-    url(images/banner5.png);
+    url(images/dewald_banner.png);
     background-position: center bottom;
     background-size: cover;
     text-align: center;
@@ -453,7 +453,7 @@ h3{
 }
 
 .sub-header-dewald h1{
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 
@@ -474,7 +474,7 @@ h3{
 }
 
 .photos{
-    width:80%;
+    width:20%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
@@ -495,6 +495,7 @@ h3{
     /*
 - TO USE THIS, make sure image is correct sizing
     width: 100%;*/
+    width: 100%;
     display: block;
 
 }
@@ -536,124 +537,4 @@ h3{
     .row{
         flex-direction: column;
     }
-}
-
-
-/*=============================BOOK LAYOUT*/
-.book-artwork{
-    margin:0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-items: center;
-    background: linear-gradient(90deg, #9a94a0 50%, #39305c 50%);
-}
-.book-artwork input{
-    display: none;
-}
-.book-artwork img{
-    width: 100%;
-    height: 100%;
-}
-
-.book{
-    display: flex;
-}
-
-#cover{
-    width: 250px;
-    height: 400px;
-}
-
-.flip-book{
-    width: 250px;
-    height: 400px;
-    position: relative;
-    perspective: 1500px;
-}
-
-.flip{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform-origin: left;
-    transform-style: preserve-3d;
-    transform: rotateY(0deg);
-    transition: 0.5s;
-    color: #000;
-}
-p{
-    font-size: 14px;
-    line-height: 24px;
-
-}
-
-.front{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgb(247, 246, 250);
-    box-sizing: border-box;
-    padding: 0 13px;
-    box-shadow: inset 20px 0 50px rgba(0,0,0,0.5) 0 2px 5px rgba(0,0,0,0.5);
-
-}
-/*rgba(0,0,0,0.5) 0 2px 5px rgba(0,0,0,0.5)*/
-.back{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 99;
-    transform: rotateY(180deg);
-    backface-visibility: hidden;
-    background-color: #000;
-
-}
-
-.next-btn{
-    position: absolute;
-    bottom: 13px;
-    right: 13px;
-    cursor: pointer;
-    color: #000;
-}
-
-.back-btn{
-    position: absolute;
-    bottom: 13px;
-    right: 13px;
-    cursor: pointer;
-    color: #000000;
-}
-
-#p1{
-    z-index: 3;
-}
-
-#p2{
-    z-index: 2;
-}
-
-#p3{
-    z-index: 1;
-}
-
-#c1:checked ~ .flip-book #p1{
-    transform: rotateY(-180deg);
-}
-
-#c2:checked ~ .flip-book #p2{
-    transform: rotateY(-180deg);
-}
-
-#c3:checked ~ .flip-book #p3{
-    transform: rotateY(-180deg);
 }
