--- a/style.css
+++ b/style.css
@@ -538,3 +538,62 @@ h3{
         flex-direction: column;
     }
 }
+
+
+/*Text blocks----------------------------------*/
+/*ABOUT US SECTION*/
+
+.word_btn_rep{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 0;
+}
+h1{
+    font-size: 36px;
+    font-weight: 600;
+    color: white;
+}
+p{
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 0 0 30px;
+}
+
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+
+
+}
+
+.word_btn_rep-col{
+    flex-basis: 31%;
+    background: #576d58;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 30px 30px;/*30px 12px;*/
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+/*For shaddow!*/
+.word_btn_rep-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+/* for smaller screen*/
+
+@media(max-width: 700px){
+    .row{
+        flex-direction: column;
+    }
+}
+
