--- a/style.css
+++ b/style.css
@@ -726,3 +726,48 @@ h2{
     font-size: 16px;
     color: #000;
 }
+
+
+/*instagram format idk*/
+
+.instagram_layout{
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 2%;
+    /*min-height: 100vh;*/
+    background-color: #fafafa;
+    color: #262626;
+    align-items: center;
+}
+
+.instagram_layout img {
+    display: block;
+}
+
+/* Gallery Section */
+
+.two_image{
+    width:45%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+    
+    flex-basis: 45%;
+    margin-bottom: 20px;
+    
+    
+}
+
+.gallery-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0 0 30px 0px rgba(0,0,0,0.2);
+    text-align: center;
+}
+
+.instagram_layout h1{
+    color: #000;
+    font-size: 20px;
+    padding-left: 7%;
+}
