--- a/style.css
+++ b/style.css
@@ -362,6 +362,14 @@ h3{
     font-weight: 600;
 }
 
+.footer p{
+    font-weight: 400;
+    color:#000;
+    padding: 0 100px;
+}
+
+
+
 /*FOR ICONCS*/
 
 .icons .fa{
