--- a/style.css
+++ b/style.css
@@ -415,6 +415,8 @@ h3{
     margin-top: 20px;
 }
 
+
+
 /*SEAN*/
 
 .sub-header-sean{
@@ -497,6 +499,11 @@ h3{
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
+}
+
+.photos-col p{
+    color: #000;
+    font-weight: 390;
 }
 
 
